--- a/projeto_final/fabio_mazza/projeto_final_modulo1_wstuff.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulo1_wstuff.ipynb
@@ -2793,7 +2793,7 @@
       "metadata": {
         "id": "Q7odB4s2iITQ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2810,14 +2810,14 @@
       "metadata": {
         "id": "OKy3TcT_v6-i"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "!pip install wandb\n",
-        "!wandb login #8c3b45b30992603e223c164011ecb67489f47bb2"
+        "!wandb login"
       ],
       "metadata": {
         "colab": {
@@ -2826,7 +2826,7 @@
         "id": "0Ex2B_LV5f1m",
         "outputId": "ad33e7c7-dd25-4fcf-8c10-c02c168f9d5b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2898,7 +2898,7 @@
         "id": "INiNHeDm5rm-",
         "outputId": "5697ed35-4256-4f42-bc98-05975f4a27a5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2972,7 +2972,7 @@
       "metadata": {
         "id": "lQ1WD0YkBTTv"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2998,7 +2998,7 @@
       "metadata": {
         "id": "Ck6nHDcbXEHE"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3029,7 +3029,7 @@
         },
         "outputId": "b4d04151-f228-4ede-de73-8332e6089228"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3068,7 +3068,7 @@
         },
         "outputId": "42f01ab1-46cd-4eb2-cd6b-24ddb83ee8f0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3115,7 +3115,7 @@
         },
         "outputId": "db0cdcc2-9d47-4a16-87b5-8389aeaeb9cb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3151,7 +3151,7 @@
       "metadata": {
         "id": "Ws5eGA5FA0CJ"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3203,7 +3203,7 @@
       "metadata": {
         "id": "CMRmMJSvy3DQ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3215,7 +3215,7 @@
       "metadata": {
         "id": "7F5-M_foDsgv"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3297,7 +3297,7 @@
         "id": "q8HmCk6DyhIH",
         "outputId": "a4773a35-8e34-4183-cac0-8bbc923c3998"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3405,7 +3405,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3478,7 +3478,7 @@
         },
         "outputId": "97443bf1-2449-49ae-a3d5-34b3eba4dd2f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3612,7 +3612,7 @@
         "id": "cbJXnHvMClIU",
         "outputId": "19c95ca3-c14b-4953-8c3b-8e29a60e1a05"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3739,7 +3739,7 @@
       "metadata": {
         "id": "cKV8f2zbhRiB"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3768,7 +3768,7 @@
       "metadata": {
         "id": "o_9LbD7Hfywo"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3873,7 +3873,7 @@
         },
         "outputId": "79701c1f-8f8d-4385-c64f-6437ec99699a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3958,7 +3958,7 @@
         },
         "outputId": "9d2d9db3-89e1-4ff6-824a-b205ecce4e28"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4011,7 +4011,7 @@
         },
         "outputId": "bc589217-4a10-4c6c-d64b-5e76a029f4c4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
