--- a/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
+++ b/projeto_final/fabio_mazza/projeto_final_modulos12.ipynb
@@ -9889,46 +9889,55 @@
         "class LanguageModel(torch.nn.Module):\n",
         "\n",
         "    def __init__(self, vocab_size: int, max_seq_length: int, embedding_dim: int, nhead: int, \n",
-        "                 num_encoder_layers: int, num_decoder_layers: int, dim_feedforward: int, dropout: float = 0.1, pad_token_id: int = 0):\n",
+        "                 num_encoder_layers: int, num_decoder_layers: int, dim_feedforward: int, n_linear: int, dropout: float = 0.1, pad_token_id: int = 0):\n",
         "\n",
         "        super(LanguageModel, self).__init__()\n",
         "\n",
         "        self.num_embeddings = vocab_size\n",
-        "        self.d_model = max_seq_length\n",
-        "        self.embedding_dim = embedding_dim\n",
+        "        self.max_seq_length = max_seq_length\n",
+        "        self.d_model = embedding_dim\n",
         "        self.nhead = nhead\n",
         "        self.num_encoder_layers = num_encoder_layers\n",
         "        self.num_decoder_layers = num_decoder_layers\n",
         "        self.dim_feedforward = dim_feedforward\n",
+        "        self.n_linear = n_linear\n",
         "        self.dropout = dropout\n",
         "        self.pad_token_id = pad_token_id\n",
         "\n",
-        "        self.embedding_decoder = torch.nn.Embedding(self.num_embeddings, self.embedding_dim, device=device)\n",
-        "        self.positional_decoder = torch.nn.Parameter(torch.randn(self.d_model, self.embedding_dim, device=device)/10000)\n",
+        "        self.embedding_decoder = torch.nn.Embedding(self.num_embeddings, self.d_model, device=device)\n",
+        "        self.positional_decoder = torch.nn.Parameter(torch.randn(self.max_seq_length, self.d_model, device=device)/10000)\n",
         "\n",
         "        self.transformer = torch.nn.Transformer(d_model=self.d_model, nhead=self.nhead, num_encoder_layers=self.num_encoder_layers, num_decoder_layers=self.num_decoder_layers, \n",
         "                               dim_feedforward=self.dim_feedforward, dropout=self.dropout, batch_first=True, device=device)\n",
+        "        \n",
+        "        self.linear = nn.Sequential(OrderedDict([\n",
+        "                              ('l1', torch.nn.Linear(self.d_model, self.n_linear, device=device)),\n",
+        "                              ('relu', torch.nn.ReLU()),\n",
+        "                              ('dropout', torch.nn.Dropout(p=0.20)),\n",
+        "                              ('l2', torch.nn.Linear(self.n_linear, self.num_embeddings, device=device, bias = False))\n",
+        "        ]))\n",
         "    \n",
         "    def forward(self, input_en, input_de):\n",
         "        \n",
         "        #Decoder\n",
         "        Y_de = self.embedding_decoder(input_de)\n",
+        "        print(Y_de.shape)\n",
         "        Y_de = Y_de + self.positional_decoder\n",
+        "        print(Y_de.shape)\n",
         "        \n",
         "\n",
         "        #Encoder\n",
-        "        #X_en = Y_de ###### For now, change when encoder is used\n",
+        "        X_en = Y_de ###### For now, change when encoder is used\n",
+        "        output_decoder = self.transformer(X_en, Y_de)\n",
+        "        \n",
+        "        output = self.linear(output_decoder)\n",
         "\n",
-        "\n",
-        "\n",
-        "        output_decoder = self.transformer(Y_de, Y_de)\n",
-        "\n",
-        "        return output_decoder"
+        "        return output"
       ],
       "metadata": {
         "id": "1bhI2ZjMrZ9V"
       },
-      "execution_count": 61,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -9940,14 +9949,15 @@
         "num_encoder_layers = 0\n",
         "num_decoder_layers = 4\n",
         "dim_feedforward = 1024\n",
+        "n_linear = 512\n",
         "\n",
         "model_2 = LanguageModel(vocab_size, max_seq_length, embedding_dim, nhead, \n",
-        "                 num_encoder_layers, num_decoder_layers, dim_feedforward)"
+        "                 num_encoder_layers, num_decoder_layers, dim_feedforward, n_linear)"
       ],
       "metadata": {
         "id": "-EKAN4kWEAFM"
       },
-      "execution_count": 62,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -9964,34 +9974,23 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 762
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Eis-6t3CHStU",
-        "outputId": "d0564a65-bfd8-490f-ffcf-2b7b01a482b4"
+        "outputId": "83fef969-d34a-4edf-ca56-57cb4f616d92"
       },
-      "execution_count": 63,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([1, 8])\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-63-594b6ea4cc3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msample_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0msample_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'sample_input.shape: {sample_input.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'sample_output.shape: {sample_output.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-61-6ee32f95321e>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input_en, input_de)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0moutput_decoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_de\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_de\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0moutput_decoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/transformer.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, src, tgt, src_mask, tgt_mask, memory_mask, src_key_padding_mask, tgt_key_padding_mask, memory_key_padding_mask)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_model\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mtgt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0md_model\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 143\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the feature number of src and tgt must be equal to d_model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mmemory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msrc_mask\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msrc_key_padding_mask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msrc_key_padding_mask\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: the feature number of src and tgt must be equal to d_model"
+            "torch.Size([1, 8])\n",
+            "torch.Size([1, 8, 256])\n",
+            "torch.Size([1, 8, 256])\n",
+            "sample_input.shape: torch.Size([1, 8])\n",
+            "sample_output.shape: torch.Size([1, 8, 28996])\n",
+            "Number of model parameters: 26617344\n"
           ]
         }
       ]
@@ -10000,27 +9999,34 @@
       "cell_type": "code",
       "source": [
         "test_input = torch.tensor([[  101.,  1109.,  1148.,  5160.,  3353.,  1108.,  1316.,  5942.]]).to(device)\n",
-        "model_2(test_input, test_input)"
+        "#model_2(test_input, test_input)"
       ],
       "metadata": {
-        "id": "d1D0j-Uan6VW",
-        "outputId": "9926cffe-2aa3-4835-e0eb-7e9f71b88fec",
+        "id": "d1D0j-Uan6VW"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sample_output[0][0][0])"
+      ],
+      "metadata": {
+        "id": "_3sCcJ0u3PMY",
+        "outputId": "8a837ced-f1bb-4e55-f0cc-5cda32341420",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 73,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[-2.1878,  1.0239, -0.7757,  0.4310,  0.0721, -0.1786,  0.9422,  0.6728]],\n",
-              "       device='cuda:0', grad_fn=<NativeLayerNormBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(-1.9485, device='cuda:0', grad_fn=<SelectBackward0>)\n"
+          ]
         }
       ]
     },
